function(cfp_add_test type dims scalar bits)
  set(test_name testCfp${type}${dims}${scalar})
  add_executable(${test_name} ${test_name}.c)
  target_link_libraries(${test_name}
    cmocka cfp zfpHashLib genSmoothRandNumsLib zfpChecksumsLib)
  add_test(NAME ${test_name} COMMAND ${test_name})
endfunction()

cfp_add_test(Array 1 f 32)
cfp_add_test(Array 2 f 32)
cfp_add_test(Array 3 f 32)
cfp_add_test(Array 4 f 32)
cfp_add_test(Array 1 d 64)
cfp_add_test(Array 2 d 64)
cfp_add_test(Array 3 d 64)
cfp_add_test(Array 4 d 64)

cfp_add_test(View 1 f 32)
cfp_add_test(View 2 f 32)
cfp_add_test(View 3 f 32)
cfp_add_test(View 4 f 32)
cfp_add_test(View 1 d 64)
cfp_add_test(View 2 d 64)
cfp_add_test(View 3 d 64)
cfp_add_test(View 4 d 64)

cfp_add_test(PrivateView 1 f 32)
cfp_add_test(PrivateView 2 f 32)
cfp_add_test(PrivateView 3 f 32)
cfp_add_test(PrivateView 4 f 32)
cfp_add_test(PrivateView 1 d 64)
cfp_add_test(PrivateView 2 d 64)
cfp_add_test(PrivateView 3 d 64)
cfp_add_test(PrivateView 4 d 64)

if(DEFINED CFP_NAMESPACE)
  add_executable(testCfpNamespace testCfpNamespace.c)
  target_link_libraries(testCfpNamespace cmocka cfp)
  add_test(NAME testCfpNamespace COMMAND testCfpNamespace)
endif()
