add_executable(testZfpDecodeBlock1dInt32 testZfpDecodeBlock1dInt32.c)
target_link_libraries(testZfpDecodeBlock1dInt32 cmocka zfp)
add_test(NAME testZfpDecodeBlock1dInt32 COMMAND testZfpDecodeBlock1dInt32)

add_executable(testZfpDecodeBlock1dInt64 testZfpDecodeBlock1dInt64.c)
target_link_libraries(testZfpDecodeBlock1dInt64 cmocka zfp)
add_test(NAME testZfpDecodeBlock1dInt64 COMMAND testZfpDecodeBlock1dInt64)

add_executable(testZfpDecodeBlock2dInt32 testZfpDecodeBlock2dInt32.c)
target_link_libraries(testZfpDecodeBlock2dInt32 cmocka zfp)
add_test(NAME testZfpDecodeBlock2dInt32 COMMAND testZfpDecodeBlock2dInt32)

add_executable(testZfpDecodeBlock2dInt64 testZfpDecodeBlock2dInt64.c)
target_link_libraries(testZfpDecodeBlock2dInt64 cmocka zfp)
add_test(NAME testZfpDecodeBlock2dInt64 COMMAND testZfpDecodeBlock2dInt64)

add_executable(testZfpDecodeBlock3dInt32 testZfpDecodeBlock3dInt32.c)
target_link_libraries(testZfpDecodeBlock3dInt32 cmocka zfp)
add_test(NAME testZfpDecodeBlock3dInt32 COMMAND testZfpDecodeBlock3dInt32)

add_executable(testZfpDecodeBlock3dInt64 testZfpDecodeBlock3dInt64.c)
target_link_libraries(testZfpDecodeBlock3dInt64 cmocka zfp)
add_test(NAME testZfpDecodeBlock3dInt64 COMMAND testZfpDecodeBlock3dInt64)

# strided
add_executable(testZfpDecodeBlockStrided1dInt32 testZfpDecodeBlockStrided1dInt32.c)
target_link_libraries(testZfpDecodeBlockStrided1dInt32 cmocka zfp)
add_test(NAME testZfpDecodeBlockStrided1dInt32 COMMAND testZfpDecodeBlockStrided1dInt32)

add_executable(testZfpDecodeBlockStrided1dInt64 testZfpDecodeBlockStrided1dInt64.c)
target_link_libraries(testZfpDecodeBlockStrided1dInt64 cmocka zfp)
add_test(NAME testZfpDecodeBlockStrided1dInt64 COMMAND testZfpDecodeBlockStrided1dInt64)

add_executable(testZfpDecodeBlockStrided2dInt32 testZfpDecodeBlockStrided2dInt32.c)
target_link_libraries(testZfpDecodeBlockStrided2dInt32 cmocka zfp)
add_test(NAME testZfpDecodeBlockStrided2dInt32 COMMAND testZfpDecodeBlockStrided2dInt32)

add_executable(testZfpDecodeBlockStrided2dInt64 testZfpDecodeBlockStrided2dInt64.c)
target_link_libraries(testZfpDecodeBlockStrided2dInt64 cmocka zfp)
add_test(NAME testZfpDecodeBlockStrided2dInt64 COMMAND testZfpDecodeBlockStrided2dInt64)

add_executable(testZfpDecodeBlockStrided3dInt32 testZfpDecodeBlockStrided3dInt32.c)
target_link_libraries(testZfpDecodeBlockStrided3dInt32 cmocka zfp)
add_test(NAME testZfpDecodeBlockStrided3dInt32 COMMAND testZfpDecodeBlockStrided3dInt32)

add_executable(testZfpDecodeBlockStrided3dInt64 testZfpDecodeBlockStrided3dInt64.c)
target_link_libraries(testZfpDecodeBlockStrided3dInt64 cmocka zfp)
add_test(NAME testZfpDecodeBlockStrided3dInt64 COMMAND testZfpDecodeBlockStrided3dInt64)
