# int
add_executable(testZfpDecodeBlock1dInt32 testZfpDecodeBlock1dInt32.c)
target_link_libraries(testZfpDecodeBlock1dInt32 cmocka zfp rand32Lib hash32Lib)
add_test(NAME testZfpDecodeBlock1dInt32 COMMAND testZfpDecodeBlock1dInt32)

add_executable(testZfpDecodeBlock1dInt64 testZfpDecodeBlock1dInt64.c)
target_link_libraries(testZfpDecodeBlock1dInt64 cmocka zfp rand64Lib hash64Lib)
add_test(NAME testZfpDecodeBlock1dInt64 COMMAND testZfpDecodeBlock1dInt64)

add_executable(testZfpDecodeBlock2dInt32 testZfpDecodeBlock2dInt32.c)
target_link_libraries(testZfpDecodeBlock2dInt32 cmocka zfp rand32Lib hash32Lib)
add_test(NAME testZfpDecodeBlock2dInt32 COMMAND testZfpDecodeBlock2dInt32)

add_executable(testZfpDecodeBlock2dInt64 testZfpDecodeBlock2dInt64.c)
target_link_libraries(testZfpDecodeBlock2dInt64 cmocka zfp rand64Lib hash64Lib)
add_test(NAME testZfpDecodeBlock2dInt64 COMMAND testZfpDecodeBlock2dInt64)

add_executable(testZfpDecodeBlock3dInt32 testZfpDecodeBlock3dInt32.c)
target_link_libraries(testZfpDecodeBlock3dInt32 cmocka zfp rand32Lib hash32Lib)
add_test(NAME testZfpDecodeBlock3dInt32 COMMAND testZfpDecodeBlock3dInt32)

add_executable(testZfpDecodeBlock3dInt64 testZfpDecodeBlock3dInt64.c)
target_link_libraries(testZfpDecodeBlock3dInt64 cmocka zfp rand64Lib hash64Lib)
add_test(NAME testZfpDecodeBlock3dInt64 COMMAND testZfpDecodeBlock3dInt64)

# strided
add_executable(testZfpDecodeBlockStrided1dInt32 testZfpDecodeBlockStrided1dInt32.c)
target_link_libraries(testZfpDecodeBlockStrided1dInt32 cmocka zfp rand32Lib hash32Lib)
add_test(NAME testZfpDecodeBlockStrided1dInt32 COMMAND testZfpDecodeBlockStrided1dInt32)

add_executable(testZfpDecodeBlockStrided1dInt64 testZfpDecodeBlockStrided1dInt64.c)
target_link_libraries(testZfpDecodeBlockStrided1dInt64 cmocka zfp rand64Lib hash64Lib)
add_test(NAME testZfpDecodeBlockStrided1dInt64 COMMAND testZfpDecodeBlockStrided1dInt64)

add_executable(testZfpDecodeBlockStrided2dInt32 testZfpDecodeBlockStrided2dInt32.c)
target_link_libraries(testZfpDecodeBlockStrided2dInt32 cmocka zfp rand32Lib hash32Lib)
add_test(NAME testZfpDecodeBlockStrided2dInt32 COMMAND testZfpDecodeBlockStrided2dInt32)

add_executable(testZfpDecodeBlockStrided2dInt64 testZfpDecodeBlockStrided2dInt64.c)
target_link_libraries(testZfpDecodeBlockStrided2dInt64 cmocka zfp rand64Lib hash64Lib)
add_test(NAME testZfpDecodeBlockStrided2dInt64 COMMAND testZfpDecodeBlockStrided2dInt64)

add_executable(testZfpDecodeBlockStrided3dInt32 testZfpDecodeBlockStrided3dInt32.c)
target_link_libraries(testZfpDecodeBlockStrided3dInt32 cmocka zfp rand32Lib hash32Lib)
add_test(NAME testZfpDecodeBlockStrided3dInt32 COMMAND testZfpDecodeBlockStrided3dInt32)

add_executable(testZfpDecodeBlockStrided3dInt64 testZfpDecodeBlockStrided3dInt64.c)
target_link_libraries(testZfpDecodeBlockStrided3dInt64 cmocka zfp rand64Lib hash64Lib)
add_test(NAME testZfpDecodeBlockStrided3dInt64 COMMAND testZfpDecodeBlockStrided3dInt64)

# floating point
add_executable(testZfpDecodeBlock1dFloat testZfpDecodeBlock1dFloat.c)
target_link_libraries(testZfpDecodeBlock1dFloat cmocka zfp rand32Lib hash32Lib)
add_test(NAME testZfpDecodeBlock1dFloat COMMAND testZfpDecodeBlock1dFloat)

add_executable(testZfpDecodeBlock1dDouble testZfpDecodeBlock1dDouble.c)
target_link_libraries(testZfpDecodeBlock1dDouble cmocka zfp rand64Lib hash64Lib)
add_test(NAME testZfpDecodeBlock1dDouble COMMAND testZfpDecodeBlock1dDouble)

add_executable(testZfpDecodeBlock2dFloat testZfpDecodeBlock2dFloat.c)
target_link_libraries(testZfpDecodeBlock2dFloat cmocka zfp rand32Lib hash32Lib)
add_test(NAME testZfpDecodeBlock2dFloat COMMAND testZfpDecodeBlock2dFloat)

add_executable(testZfpDecodeBlock2dDouble testZfpDecodeBlock2dDouble.c)
target_link_libraries(testZfpDecodeBlock2dDouble cmocka zfp rand64Lib hash64Lib)
add_test(NAME testZfpDecodeBlock2dDouble COMMAND testZfpDecodeBlock2dDouble)

add_executable(testZfpDecodeBlock3dFloat testZfpDecodeBlock3dFloat.c)
target_link_libraries(testZfpDecodeBlock3dFloat cmocka zfp rand32Lib hash32Lib)
add_test(NAME testZfpDecodeBlock3dFloat COMMAND testZfpDecodeBlock3dFloat)

add_executable(testZfpDecodeBlock3dDouble testZfpDecodeBlock3dDouble.c)
target_link_libraries(testZfpDecodeBlock3dDouble cmocka zfp rand64Lib hash64Lib)
add_test(NAME testZfpDecodeBlock3dDouble COMMAND testZfpDecodeBlock3dDouble)

# strided
add_executable(testZfpDecodeBlockStrided1dFloat testZfpDecodeBlockStrided1dFloat.c)
target_link_libraries(testZfpDecodeBlockStrided1dFloat cmocka zfp rand32Lib hash32Lib)
add_test(NAME testZfpDecodeBlockStrided1dFloat COMMAND testZfpDecodeBlockStrided1dFloat)

add_executable(testZfpDecodeBlockStrided1dDouble testZfpDecodeBlockStrided1dDouble.c)
target_link_libraries(testZfpDecodeBlockStrided1dDouble cmocka zfp rand64Lib hash64Lib)
add_test(NAME testZfpDecodeBlockStrided1dDouble COMMAND testZfpDecodeBlockStrided1dDouble)

add_executable(testZfpDecodeBlockStrided2dFloat testZfpDecodeBlockStrided2dFloat.c)
target_link_libraries(testZfpDecodeBlockStrided2dFloat cmocka zfp rand32Lib hash32Lib)
add_test(NAME testZfpDecodeBlockStrided2dFloat COMMAND testZfpDecodeBlockStrided2dFloat)

add_executable(testZfpDecodeBlockStrided2dDouble testZfpDecodeBlockStrided2dDouble.c)
target_link_libraries(testZfpDecodeBlockStrided2dDouble cmocka zfp rand64Lib hash64Lib)
add_test(NAME testZfpDecodeBlockStrided2dDouble COMMAND testZfpDecodeBlockStrided2dDouble)

add_executable(testZfpDecodeBlockStrided3dFloat testZfpDecodeBlockStrided3dFloat.c)
target_link_libraries(testZfpDecodeBlockStrided3dFloat cmocka zfp rand32Lib hash32Lib)
add_test(NAME testZfpDecodeBlockStrided3dFloat COMMAND testZfpDecodeBlockStrided3dFloat)

add_executable(testZfpDecodeBlockStrided3dDouble testZfpDecodeBlockStrided3dDouble.c)
target_link_libraries(testZfpDecodeBlockStrided3dDouble cmocka zfp rand64Lib hash64Lib)
add_test(NAME testZfpDecodeBlockStrided3dDouble COMMAND testZfpDecodeBlockStrided3dDouble)
